--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -426,10 +426,10 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2011-12-22]
-%   {\seq_set_map:NNn, \seq_gset_map:NNn}
+% \begin{function}[added = 2020-07-16]
+%   {\seq_set_map_x:NNn, \seq_gset_map_x:NNn}
 %   \begin{syntax}
-%     \cs{seq_set_map:NNn} \meta{sequence_1} \meta{sequence_2} \Arg{inline function}
+%     \cs{seq_set_map_x:NNn} \meta{sequence_1} \meta{sequence_2} \Arg{inline function}
 %   \end{syntax}
 %   Applies \meta{inline function} to every \meta{item} stored
 %   within the \meta{sequence_2}. The \meta{inline function} should
@@ -1145,17 +1145,17 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\seq_set_map:NNn, \seq_gset_map:NNn}
-% \begin{macro}{\@@_set_map:NNNn}
+% \begin{macro}{\seq_set_map_x:NNn, \seq_gset_map_x:NNn}
+% \begin{macro}{\@@_set_map_x:NNNn}
 %   Very similar to \cs{seq_set_filter:NNn}. We could actually
 %   merge the two within a single function, but it would have weird
 %   semantics.
 %    \begin{macrocode}
-\cs_new_protected:Npn \seq_set_map:NNn
-  { \@@_set_map:NNNn \tl_set:Nx }
-\cs_new_protected:Npn \seq_gset_map:NNn
-  { \@@_set_map:NNNn \tl_gset:Nx }
-\cs_new_protected:Npn \@@_set_map:NNNn #1#2#3#4
+\cs_new_protected:Npn \seq_set_map_x:NNn
+  { \@@_set_map_x:NNNn \tl_set:Nx }
+\cs_new_protected:Npn \seq_gset_map_x:NNn
+  { \@@_set_map_x:NNNn \tl_gset:Nx }
+\cs_new_protected:Npn \@@_set_map_x:NNNn #1#2#3#4
   {
     \@@_push_item_def:n { \exp_not:N \@@_item:n {#4} }
     #1 #2 { #3 }
