--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -3368,7 +3368,7 @@ and all files in that bundle must be distributed together.
   {
     \seq_set_map:NNn \l_@@_tmpa_seq
       \g_@@_nested_names_seq
-      { \exp_not:n { \@@_macro_end_wrap_item:n {##1} } }
+      { \@@_macro_end_wrap_item:n {##1} }
     End~ definition~ for~
     \int_compare:nTF { \seq_count:N \l_@@_tmpa_seq <= 3 }
       {
