--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -604,7 +604,8 @@
 %     \cs{tl_build_end:N} \meta{tl~var}
 %   \end{syntax}
 %   Gets the contents of \meta{tl~var} and stores that into the
-%   \meta{tl~var} using \cs{tl_set:Nn}.  The \meta{tl~var} must have
+%   \meta{tl~var} using \cs{tl_set:Nn} or \cs{tl_gset:Nn}.
+%   The \meta{tl~var} must have
 %   been set up with \cs{tl_build_begin:N} or \cs{tl_build_gbegin:N}.
 %   The |end| and |gend| functions must be used for local and global
 %   \meta{tl~var} respectively.  These functions completely remove the
