--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -2242,8 +2242,20 @@
 % \begin{macro}{\@@_color:n}
 %   Calls \tn{color}, and otherwise does nothing if \tn{color} is not defined.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_color:n #1
-  { \cs_if_exist:NT \color { \color {#1} } }
+\cs_if_exist:NTF \AtBeginDocument
+  { \AtBeginDocument }
+  { \use:n }
+  {
+    \cs_new_protected:Npx \@@_color:n #1
+      {
+        \cs_if_exist:NTF \color_select:n
+          { \color_select:n {#1} }
+          {
+            \cs_if_exist:NT \color
+              { \exp_not:N \color {#1} }
+          }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
