--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -2236,10 +2236,15 @@
 %   flexible.
 %    \begin{macrocode}
 \tl_new:N  \l_@@_display_font_tl
-\tl_set:Nx \l_@@_display_font_tl
+\cs_if_exist:NTF \AtBeginDocument
+  { \AtBeginDocument }
+  { \use:n }
   {
-    \cs_if_exist:NT \sffamily { \exp_not:N \sffamily }
-    \cs_if_exist:NT \tiny { \exp_not:N \tiny }
+    \tl_set:Nx \l_@@_display_font_tl
+      {
+        \cs_if_exist:NT \sffamily { \exp_not:N \sffamily }
+        \cs_if_exist:NT \tiny { \exp_not:N \tiny }
+      }
   }
 %    \end{macrocode}
 % \end{variable}
