--- a/l3backend/l3backend-box.dtx
+++ b/l3backend/l3backend-box.dtx
@@ -56,7 +56,7 @@
 % \section{\pkg{l3backend-box} Implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %<@@=box>
 %    \end{macrocode}
 %
@@ -462,7 +462,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
