--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -56,7 +56,7 @@
 % \section{\pkg{l3backend-color} Implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %<@@=color>
 %    \end{macrocode}
 %
@@ -434,7 +434,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
