--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -56,7 +56,7 @@
 % \section{\pkg{l3backend-draw} Implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %<@@=draw>
 %    \end{macrocode}
 %
@@ -1054,7 +1054,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
