--- a/l3experimental/l3draw/l3draw-layers.dtx
+++ b/l3experimental/l3draw/l3draw-layers.dtx
@@ -53,7 +53,7 @@
 % \section{\pkg{l3draw-layers} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -208,7 +208,7 @@
 % \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
