protected auxiliaries for keys_find_key_module

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2649,22 +2649,22 @@
     \@@_find_key_module_auxi:Nw #2 #1 \s_@@_nil \@@_find_key_module_auxii:Nw
       / \s_@@_nil \@@_find_key_module_auxiv:Nw #3
   }
-\cs_new:Npn \@@_find_key_module_auxi:Nw #1 #2 / #3 \s_@@_nil #4
+\cs_new_protected:Npn \@@_find_key_module_auxi:Nw #1 #2 / #3 \s_@@_nil #4
   {
     #4 #1 #2 \s_@@_mark #3 \s_@@_nil #4
   }
-\cs_new:Npn \@@_find_key_module_auxii:Nw
+\cs_new_protected:Npn \@@_find_key_module_auxii:Nw
     #1 #2 \s_@@_mark #3 \s_@@_nil \@@_find_key_module_auxii:Nw
   {
     \cs_set_nopar:Npx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
     \@@_find_key_module_auxi:Nw #1 #3 \s_@@_nil \@@_find_key_module_auxiii:Nw
   }
-\cs_new:Npn \@@_find_key_module_auxiii:Nw #1 #2 \s_@@_mark
+\cs_new_protected:Npn \@@_find_key_module_auxiii:Nw #1 #2 \s_@@_mark
   {
     \cs_set_nopar:Npx #1 { \tl_if_empty:NF #1 { #1 / } #2 }
     \@@_find_key_module_auxi:Nw #1
   }
-\cs_new:Npn \@@_find_key_module_auxiv:Nw
+\cs_new_protected:Npn \@@_find_key_module_auxiv:Nw
     #1 #2 \s_@@_nil #3 \s_@@_mark
     \s_@@_nil \@@_find_key_module_auxiv:Nw #4
   {
